--- a/index.html
+++ b/index.html
@@ -3,3 +3,4 @@
   // later
 </script>
 <script src="https://togetherjs.com/togetherjs-min.js"></script>
+<button onclick="TogetherJS(this); return false;">Start TogetherJS</button>
