--- a/index.html
+++ b/index.html
@@ -35,10 +35,15 @@
     function init() {
       //// Initialize Firebase.
       //// TODO: replace with your Firebase project configuration.
-      var config = {
-        apiKey: '<API_KEY>',
-        authDomain: "firepad-tests.firebaseapp.com",
-        databaseURL: "https://firepad-tests.firebaseio.com"
+      const firebaseConfig = {
+        apiKey: "AIzaSyDB37-bhGy8AQtSWqz4KtjLuXvrYxMgq7g",
+        authDomain: "collector-77c90.firebaseapp.com",
+        databaseURL: "https://collector-77c90.firebaseio.com",
+        projectId: "collector-77c90",
+        storageBucket: "collector-77c90.appspot.com",
+        messagingSenderId: "756654844058",
+        appId: "1:756654844058:web:4ed71ca509cce53bd59723",
+        measurementId: "G-H6ZGSFEGQ0"
       };
       firebase.initializeApp(config);
 
