--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     function init() {
       //// Initialize Firebase.
       //// TODO: replace with your Firebase project configuration.
-      const firebaseConfig = {
+      config = {
         apiKey: "AIzaSyDB37-bhGy8AQtSWqz4KtjLuXvrYxMgq7g",
         authDomain: "collector-77c90.firebaseapp.com",
         databaseURL: "https://collector-77c90.firebaseio.com",
